<resources>
    <string name="version">v0.5.0</string>
    <string name="environment">DEV</string>
    <string name="app_name">CQ On Demand</string>
    <string name="title_activity_splash_screen">CQ On Demand</string>
    <string name="title_activity_sign_in">CQ On Demand - v0.5.0 (DEV)</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_create_account">Sign Up</string>
    <string name="title_activity_user_account_view">Account Details</string>
    <string name="title_activity_user_account_edit">Edit Account Details</string>
    <string name="title_activity_user_account_list">Users</string>
    <string name="title_activity_user_account_change_password">Change Password</string>
    <string name="title_activity_category_create">Create Category</string>
    <string name="title_activity_category_list">Service Categories</string>
    <string name="title_activity_service_create">Create Service</string>
    <string name="title_activity_service_view">Service Details</string>
    <string name="title_activity_service_edit">Edit Service Details</string>
    <string name="title_activity_service_list">Services</string>
    <string name="title_activity_availability_week_view">Availabilities</string>
    <string name="title_activity_booking_create">Confirm Booking</string>
    <string name="title_activity_booking_view">Booking Details</string>
    <string name="title_activity_booking_list">My Bookings</string>
    <string name="title_activity_service_provider_picker">Pick a Service Provider</string>
    <string name="title_activity_service_provider_profile">Service Provider Profile</string>
    <string name="title_activity_review_create">Create a Review</string>
    <string name="title_activity_review_view">Service Provider Review</string>
    <string name="title_activity_review_list">Service Provider Reviews</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="signature">Created by CircularQueue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="homeowner">Homeowner</string>
    <string name="service_provider">Service Provider</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="company_name">Company Name</string>
    <string name="view_acount">View Account Details</string>
    <string name="cq_logo">Circular Queue Logo</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_type">Account Type</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="admin">Admin</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">Confirm New Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_list_title">Current User List</string>
    <string name="full_name_template">%s %s</string>
    <string name="logged_in_as_admin_template">You are logged in as an %s</string>
    <string name="logged_in_as_template">You are logged in as a %s</string>
    <string name="create_test">Create Test Account</string>
    <string name="sample_homeowner">Homeowner</string>
    <string name="sample_username">SuperUser452</string>
    <string name="sample_first_name">FName</string>
    <string name="sample_last_name">LName</string>
    <string name="sample_email">address@sub.domain</string>
    <string name="test_exists">Test if User Exists</string>
    <string name="create_admin_account">Create Admin Account</string>
    <string name="my_account">My Account</string>
    <string name="services">Services</string>
    <string name="user_list">Users</string>
    <string name="manage_services">Manage Services</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="button">Button</string>
    <string name="create_category">Create Category</string>
    <string name="category_title">Category Title</string>
    <string name="service_name">Service Name</string>
    <string name="service_rate">Service Rate</string>
    <string name="create_service">Create Service</string>
    <string name="category_name">Category Name</string>
    <string name="edit_account">Edit Account</string>
    <string name="new_category">New Category</string>
    <string name="new_service">New Service</string>
    <string name="edit_service">Edit Service</string>
    <string name="delete_service">Delete Service</string>
    <string name="category">Category</string>
    <string name="service">Service</string>
    <string name="account">Account</string>
    <string name="completed">Completed</string>
    <string name="signing_in">Signing In...</string>
    <string name="user_account">User Account</string>
    <string name="service_rate_template">$%,d.00 / hour</string>
    <string name="rating_template_none">(no ratings)</string>
    <string name="rating_template_single">(1 rating)</string>
    <string name="rating_template">(%d ratings)</string>
    <string name="zero_value_service">Free</string>
    <string name="category_template">Category: %s</string>
    <string name="category_title_template">%s Services</string>
    <string name="delete_category">Delete Category</string>
    <string name="service_category">Service Category</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="already_rated">This service booking has already been reviewed.  It cannot be reviewed again.</string>
    <string name="user_does_not_exist_review_create">This review cannot be created because the service provider no longer exists.</string>
    <string name="create_db_error_template">Unable to create the %s at this time due to a database error. Please try again later.</string>
    <string name="create_generic_error_template">Unable to create the %s at this time. Please try again later.</string>
    <string name="update_db_error_template">Unable to update this %s at this time due to a database error. Please try again later.</string>
    <string name="update_generic_error_template">Unable to update this %s at this time. Please try again later.</string>
    <string name="booking_approved_successfully">This booking has been successfully approved.</string>
    <string name="booking_cancelled_successfully">This booking has been successfully cancelled.</string>
    <string name="unlink_service">Unlink Service</string>
    <string name="remove_service">Remove Service</string>
    <string name="service_name_invalid">Please only use letters, numbers, spaces, or apostrophes for the name of a service</string>
    <string name="category_name_invalid">Please only use letters, numbers, spaces, or apostrophes for the name of a category</string>
    <string name="category_select">Select Category</string>
    <string name="category_list_db_error">Unable to load the category list at this time due to a database error. Please try again later.</string>
    <string name="category_selection_error">Please select a category!</string>
    <string name="empty_service_name_msg">Service name is required!</string>
    <string name="empty_service_rate_error">Service rate is required!</string>
    <string name="negative_service_rate_error">Service rate cannot be negative!</string>
    <string name="rate_too_high_msg">Service rate is too large! Max value is %s</string>
    <string name="service_creation_success">The service %s has been successfully created.</string>
    <string name="service_create_db_error">Unable to create your service at this time due to a database error. Please try again later.</string>
    <string name="service_name_taken_error">Service name already exists!</string>
    <string name="service_create_error_generic">Unable to create your service at this time. Please try again later.</string>
    <string name="empty_category_name_error">Category name is required!</string>
    <string name="invalid_username_msg">Invalid username: Only letters, numbers, dash, period, and underscores are allowed. </string>
    <string name="banned_username_msg">Invalid username: the selected username is not allowed.</string>
    <string name="empty_username_error">Username is required!</string>
    <string name="empty_first_name_error">First name is required!</string>
    <string name="invalid_first_name_error">Please only use letters, spaces or apostrophes for your first name.</string>
    <string name="empty_last_name_error">Last name is required!</string>
    <string name="invalid_last_name_error">Please only use letters, spaces or apostrophes for your last name.</string>
    <string name="empty_email_error">Email is required!</string>
    <string name="invalid_email_error">This is an invalid E-mail address!</string>
    <string name="empty_password_error">Password is required!</string>
    <string name="password_too_short_error">Minimum length of password is 6 characters.</string>
    <string name="password_mismatch_error">Both passwords must match.</string>
    <string name="banned_password_error">The selected password is banned. Please select a new password.</string>
    <string name="password_contains_username">The password cannot contain the username.</string>
    <string name="password_error_generic">Invalid password.</string>
    <string name="no_user_type_selected">Please select a type!</string>
    <string name="account_create_success">The user account \'%s\' has been successfully created.  Please sign in to continue.</string>
    <string name="account_create_db_error">Unable to create your account at this time due to a database error. Please try again later.</string>
    <string name="username_already_taken">Username is already in use!</string>
    <string name="generic_account_create_error">Unable to create your account at this time. Please try again later.</string>
    <string name="no_changes_made_error_tempalte">No changes were made to the %s.</string>
    <string name="user_list_db_error">There was an error getting the users from the database. Please try again later.</string>
    <string name="provider_list_db_error">There was an error getting the service providers from the database. Please try again later.</string>
    <string name="password_update_success">Password updated successfully!</string>
    <string name="password_update_db_error">Unable to update your password at this time due to a database error. Please try again later.</string>
    <string name="availability">Availability</string>
    <string name="help">Help</string>
    <string name="clear_avail">Clear Availabilities</string>
    <string name="clear">Clear</string>
    <string name="reset_to_last_saved">Restore Last Saved</string>
    <string name="reset">Reset</string>
    <string name="legend">Legend</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="tips">Tips</string>
    <string name="avail_tip_1">- Tap on a timeslot to toggle it between available and unavailable.</string>
    <string name="avail_tip_2">- Long press on an unavailable timeslot to mark it, and the timeslots above it (up to an available timeslot), as available.</string>
    <string name="avail_tip_3">- Long press on an available timeslot to mark it, and the connected timeslots above and below it, as unavailable.</string>
    <string name="date">Date</string>
    <string name="select_date">Select a Date</string>
</resources>