<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp_week_view_help_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_avail_help"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_help_outline_light_24"
            android:title="@string/help"
            android:titleCondensed="@string/help"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/grp_week_view_date_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_select_date"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_date_range_light_24"
            android:title="@string/select_date"
            android:titleCondensed="@string/date"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/grp_avail_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_avail_clear"
            android:checkable="false"
            android:checked="false"
            android:title="@string/clear_avail"
            android:titleCondensed="@string/clear"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_item_avail_reset"
            android:checkable="false"
            android:checked="false"
            android:title="@string/reset_to_last_saved"
            android:titleCondensed="@string/reset" />
    </group>

</menu>