<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp_user_edit_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_user_edit"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_edit_light_20"
            android:title="@string/edit_account"
            android:titleCondensed="@string/edit"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/grp_user_password_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_user_change_password"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_key_light_20"
            android:title="@string/change_password"
            android:titleCondensed="@string/password"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/grp_user_delete_controls"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_user_delete"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_delete_forever_light_24"
            android:title="@string/delete_account"
            android:titleCondensed="@string/delete"
            app:showAsAction="ifRoom" />
    </group>

</menu>